syntax = "proto3";

option go_package = "./pb";

message RegistrationRequest{
  string login = 1;
  string password = 2;
}

message LoginRequest{
  string login = 1;
  string password = 2;
}

message Token{
  string token = 1;
}

message UserResponse {
  string id = 1;
  string login = 2;
}

service UserService{
  rpc Registration(RegistrationRequest) returns  (Token);
  rpc Login(LoginRequest) returns  (Token);
  rpc GetUser(Token) returns (UserResponse);
}




